--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,12 +3,17 @@ import { getCollection } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
 import Header from '../../components/Header.astro';
 
-const slugParam = Astro.params.slug as string;
-const allForFind = await getCollection('blog');
-const post = allForFind.find((p) => p.slug === slugParam);
-if (!post) {
-  return new Response('Post not found', { status: 404 });
+export const prerender = true;
+
+export async function getStaticPaths() {
+  const posts = await getCollection('blog');
+  return posts.map((post) => ({
+    params: { slug: post.slug },
+    props: { post },
+  }));
 }
+
+const { post } = Astro.props;
 const { Content } = await post.render();
 
 // Get related posts
